# LLVK_Beginning

./: .gitignore  BufferManager.cpp  BufferManager.h  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.h  CommandManager.cpp  CommandManager.h  DescriptorManager.cpp  DescriptorManager.h  Device.cpp  Device.h  Frambuffer.cpp  Frambuffer.h  GeoVertexDescriptions.cpp  GeoVertexDescriptions.h  Image.cpp  Image.h  ImageUtils.cpp  ImageUtils.h  LICENSE  LLVK_Camera.cpp  LLVK_Camera.h  LLVK_Descriptor.hpp  LLVK_ExrImage.cpp  LLVK_ExrImage.h  LLVK_GeometryLoader.cpp  LLVK_GeometryLoader.h  LLVK_GeometryLoaderV2.hpp  LLVK_GeomtryLoader.cpp  LLVK_GeomtryLoader.h  LLVK_Image.cpp  LLVK_Image.h  LLVK_Math.hpp  LLVK_RenderPass.hpp  LLVK_SYS.hpp  LLVK_UT_Json.hpp  LLVK_UT_Pipeline.hpp  LLVK_UT_VmaBuffer.hpp  LLVK_Utils.hpp  (+24 more)
proj/: VulkanScene01.hip  ktx_array.hip
proj/tex_array/: generate_ktx2.bat
renderer/: BasicRenderer.cpp  BasicRenderer.h  SimplePipeline.cpp  SimplePipeline.h  dynamicsUBO.cpp  dynamicsUBO.h
renderer/DynamicsUBO/: dynamicsUBO.cpp  dynamicsUBO.h
renderer/csm/: CSMDepthPass.cpp  CSMDepthPass.h  CSMPass.cpp  CSMPass.h  CSMRenderer.cpp  CSMRenderer.h  CSMScenePass.cpp  CSMScenePass.h  CSM_GeometryContainers.cpp  CSM_GeometryContainers.h
renderer/cubemap/: CubeMap.cpp  CubeMap.h  CubeMapPass.hpp  CubeMapRenderer.cpp  CubeMapRenderer.h  ScenePass.hpp
renderer/deferred/: deferred.cpp  deferred.h
renderer/dualpass/: DualPass.cpp  DualPass.h  DualPassGlobal.hpp  DualPassRenderer.cpp  DualPassRenderer.h  ScenePass.cpp  ScenePass.h  UT_DualVkRenderPass.hpp
renderer/epic/: EpicRenderer.cpp  EpicRenderer.h  EpicRendererDefines.hpp  readme.md
renderer/heightblend/: HeightBlendRenderer.cpp  HeightBlendRenderer.h
renderer/indirectdraw/: IndirectDrawPass.cpp  IndirectDrawPass.h  IndirectDrawRenderer.cpp  IndirectDrawRenderer.h  README.md
renderer/instance/: InstanceRenderer.cpp  InstanceRenderer.h  JsonSceneParser.cpp  JsonSceneParser.h  TerrainPass.cpp  TerrainPass.h
renderer/ktx_texarray/: ktx_tex2darray.cpp  ktx_tex2darray.h
renderer/ktx_texture/: ktx_texture.cpp  ktx_texture.h
renderer/multi_viewports/: MultiViewPorts.cpp  MultiViewPorts.h  MultiViewPortsShadowPass.cpp  MultiViewPortsShadowPass.h
renderer/public/: CustomVertexFormat.hpp  GeometryContainers.cpp  GeometryContainers.h  Helper.hpp  SimpleShadowPass.cpp  SimpleShadowPass.h  UT_CustomRenderer.hpp
renderer/rbd_vat/: RbdVatRenderer.cpp  RbdVatRenderer.h
renderer/rbd_vat_storage/: RbdVatStorageBufferRenderer.cpp  RbdVatStorageBufferRenderer.h
renderer/screenshot/: ScreenShotRenderer.cpp  ScreenShotRenderer.h
renderer/shadowmap/: shadowmap.cpp  shadowmap.h
renderer/shadowmap_v2/: README.md  ScenePass.cpp  ScenePass.h  ShadowMapPass.cpp  ShadowMapPass.h  Shadowmap_v2.cpp  Shadowmap_v2.h  UT_ShadowMap.hpp
renderer/spheremap/: ScenePass.hpp  SphereMapPass.hpp  SphereMapRenderer.cpp  SphereMapRenderer.h
renderer/subpass/: SPShadowPass.cpp  SPShadowPass.h  SubPassRenderer.cpp  SubPassRenderer.h  SubPassResource.cpp  SubPassResource.h  SubpassTypes.hpp
renderer/tank_billboard/: tank_billboard.cpp  tank_billboard.h
renderer/texarray/: tex2darray.cpp  tex2darray.h
renderer/vma/: VmaRenderer.cpp  VmaRenderer.h
renderer/vmaCustomResolverTexture/: vmaCustomResolverTex.cpp  vmaCustomResolverTex.h
shaders/: frag_shader.frag  instance_shader_frag.frag  instance_shader_vert.vert  shader_frag.frag  standard_frag.frag  standard_vert.vert  vert_shader.vert
shaders/GenericShadowMap/: GSM_frag.frag  GSM_vert.vert
shaders/csm/: csm_depth_frag.frag  csm_depth_geom.geom  csm_depth_vert.vert  csm_scene_frag.frag  csm_scene_vert.vert  depthPass_frag.frag  depthPass_geom.geom
shaders/cubemap/: cubemap_frag.frag  cubemap_scene_frag.frag  cubemap_scene_vert.frag  cubemap_scene_vert.vert  cubemap_vert.vert
shaders/deferred/: deferred_frag.frag  deferred_vert.vert  mrt_frag.frag  mrt_vert.vert
shaders/dualpass/: back_frag.frag  dp_comp_frag.frag  dp_grid_frag.frag  dp_grid_vert.vert  dualpass_comp_frag.frag  front_frag.frag  hair_vert.vert
shaders/dynamicsUBO/: dynamicsUBO_frag.frag  dynamicsUBO_vert.vert
shaders/headlight/: headlight_frag.frag  headlight_vert.vert
shaders/heightblend/: heightblend_frag.frag  heightblend_vert.vert
shaders/include/: common.glsl  gltf_layout_frag.glsl  gltf_layout_vert.glsl  math.glsl  pbr.glsl  shadowFn.glsl
shaders/indirectDraw/: indirect_instance_frag.frag  indirect_instance_vert.vert
shaders/instance/: instance_frag.frag  instance_vert.vert  terrain_frag.frag  terrain_frag_v2.frag  terrain_vert_v2.vert
shaders/meshader_triangle/: ms_triangle_frag.frag  ms_triangle_mesh.mesh  ms_triangle_task.task
shaders/multi_viewports/: multi_viewports_frag.frag  multi_viewports_geom.geom  multi_viewports_vert.vert
shaders/quad/: simple_quad_frag.frag  simple_quad_vert.vert
shaders/rbd_vat/: rbd_vat_frag.frag  rbd_vat_vert.vert
shaders/rbd_vat_storage/: rbd_vat_storage_frag.frag  rbd_vat_storage_vert.vert
shaders/shadowmap/: foliage_frag.frag  offscreen_frag.frag  offscreen_opacity_frag.frag  offscreen_opaque_frag.frag  offscreen_vert.vert  opaque_frag.frag  scene_frag.frag  scene_vert.vert
shaders/shadowmap_v2/: sm_v2_offscreen_frag.frag  sm_v2_scene_frag.frag  sm_v2_scene_vert.vert
shaders/spheremap/: spheremap_frag.frag  spheremap_scene_frag.frag  spheremap_vert.vert
shaders/subpass/: subpass_comp_frag.frag  subpass_forward_frag.frag  subpass_forward_vert.vert  subpass_gbuffer_frag.frag  subpass_gbuffer_vert.vert  subpass_sm_vert.vert
shaders/tank_billboard/: tank_billboard_frag.frag  tank_billboard_vert.vert
tools/: CMakeLists.txt
tools/enkiTS_dump/: CMakeLists.txt  Timer.h  enkiTS_dump.cpp  enkiTS_pinnedTaskAdvanced.hpp  enkiTs_pinnedTaskAdvancedV2.hpp
tools/exr_dump/: CMakeLists.txt  exr_dump.cpp  exr_dump.h
tools/gltf_dump/: CMakeLists.txt  README.md  gltf_dump.cpp  gltf_dump.h
tools/spir_v_reflect/: CMakeLists.txt  readme.md  spirv_reflect_vert.vert  spirv_reflection.cpp  spirv_reflection.h
tools/triangle/: CMakeLists.txt  main.cpp
(+26 files in other folders)
